2009-06-17  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/ParserDriver.h: Forward declaration for generated include
	file (allows to install ParserDriver.h without installing location.hh).
	* src/dlvhex/ParserDriver.cpp: Including location.hh only in this file.

2009-06-16  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/testsuite/dlvhex/ASPsolverTest.cpp: Add test for nested ASP solver.

	* src/dlvhex/Makefile.am (libaspsolver_la_SOURCES): Add ASPSolver.cpp.

	* include/dlvhex/ASPSolver.h (ASPSolverComposite): New composite solver.
	(ASPFileSolver): New file solver.
	* include/dlvhex/ASPSolver.tcc: Likewise.
	* src/dlvhex/ASPSolver.cpp: Likewise.

2009-06-12  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/dlvhex/Process.h (Process::spawn): Add spawn method with list of options.
	* include/dlvhex/DLVProcess.h (DLVProcess::spawn): Likewise.
	* src/dlvhex/DLVProcess.cpp (DLVProcess::spawn): Likewise

	* include/dlvhex/ASPSolver.h (BaseASPSolver::solve): Add solve method with list of options.
	(ASPSolver<Builder,Parser>::solve): Likewise.
	* include/dlvhex/ASPSolver.tcc (ASPSolver<Builder,Parser>::solve): Likewise.

	* src/testsuite/dlvhex/ASPsolverTest.cpp: Add test for ASP solver with list of options.

2009-05-05  Alessandra Martello  <a.martello@mat.unical.it>

	* src/dlvhex/State.cpp: Bag fixed. Bound the OutputBuilder created
	within a PluginInterface to the ProgramContext.

2009-04-07  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/HexParser.ypp: Zero arity: parsing "&ext", "&ext[]", "&ext[]()" and "&ext()". 
	* src/testsuite/dlvhex/TestPlugin.cpp: Added two test atoms for zero arity testing.
	* examples/extatom9.hex: Testcase for zero arity predicate parsing and evaluation.
	* examples/tests/extatom9.out: Likewise.
	* examples/tests/dlvhextests.test: Likewise.

2009-04-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/PluginInterface.cpp (checkInputArity): Fix a segfault
	in case of empty inputType.
