@@ -1,3 +1,11 @@
+2009-07-XX  Peter Schueller  <ps@kr.tuwien.ac.at>
+
+	Rewriting and extending the parser using boost::spirit:
+	Added support for ternary operators (prefix and infix),
+		binary operators (prefix) and #succ.
+	Corrected location of #int builtin in parser (previously allowed in rule head).
+	Corrected #maxint parsing (missing trailing dot).
+
 2009-06-17  Peter Schueller  <ps@kr.tuwien.ac.at>
 
 	* include/dlvhex/ParserDriver.h: Forward declaration for generated include
